--- a/index.html
+++ b/index.html
@@ -94,11 +94,7 @@
           <div class="card-body">
             <h2
               class="card-title"
-              style="
-                margin-top: 5rem;
-                font-weight: bold;
-                font-family: 'dancing script';
-              ">
+              style="font-weight: bold; font-family: 'dancing script'">
               #20th Birthday#
             </h2>
             <i class="card-text" style="font-size: 1.2rem">
