--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
         <div class="col-md-4">
           <div
+            style="padding-top: 5rem"
             id="carouselExampleFade"
             class="carousel slide carousel-fade"
             data-bs-ride="carousel">
