--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                 style="font-family: 'dancing script'; font-size: 2.5rem">
                 Precious
               </h5>
-              <p class="card-text" style="font-family: cursive">
+              <i class="card-text" style="font-size: 1.3rem">
                 "To myself, on my special day: May my inner light shine brighter
                 than ever, illuminating my path and guiding me towards my
                 wildest dreams. May my heart remain fierce, my spirit stay
                 adventurous, and my soul stay radiant."
-              </p>
+              </i>
 
               <p
                 style="
@@ -206,12 +206,12 @@
                 style="font-family: 'dancing script'; font-size: 2.5rem">
                 Boluwatife
               </h5>
-              <p class="card-text" style="font-family: cursive">
+              <i class="card-text" style="font-size: 1.3rem">
                 "As I celebrate another year of life, I remind myself that I am
                 a force to be reckoned with - a powerful, passionate, and proud
                 Leo. May my day be filled with joy, my year be filled with
                 growth, and my life be filled with purpose."
-              </p>
+              </i>
 
               <p
                 style="
@@ -261,12 +261,12 @@
                 style="font-family: 'dancing script'; font-size: 2.5rem">
                 Gbogbolomo
               </h5>
-              <p class="card-text" style="font-family: cursive">
+              <i class="card-text" style="font-size: 1.3rem">
                 "As I mark another year of life, I promise myself to keep
                 shining, keep exploring, and keep pushing beyond my limits. May
                 my birthday be a catalyst for growth, learning, and becoming the
                 best version of myself."
-              </p>
+              </i>
               <p
                 style="
                   font-family: 'dancing script';
