--- a/index.html
+++ b/index.html
@@ -322,6 +322,25 @@
             ></a>
           </button>
         </div>
+
+        <div class="d-grid gap-2" style="margin: 2rem 0">
+          <button class="btn" style="background-color: #c9146e">
+            <a
+              href=""
+              style="
+                color: #fff;
+                text-decoration: none;
+                font-size: 1.6rem;
+                text-align: center;
+                font-family: pacifico;
+              "
+              >Send me a wish here<i
+                class="fa-brands fa-instagram"
+                style="padding-left: 1.5rem"></i
+            ></a>
+          </button>
+        </div>
+
         <div class="d-grid gap-2" style="margin: 2rem 0">
           <button class="btn" style="background-color: #008000">
             <a
