--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="d-grid gap-2" style="margin: 2rem 0">
           <button class="btn" style="background-color: #c9146e">
             <a
-              href=""
+              href="https://www.instagram.com/gbog_bolomo?igsh=YWVxcm9heGl5eWpo"
               style="
                 color: #fff;
                 text-decoration: none;
