--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
           ">
           Happy Birthday To Me
         </div>
+        <video
+          src="./images/istockphoto-1038669772-640_adpp_is.mp4"
+          muted
+          autoplay
+          loop></video>
+
         <div class="col-md-4">
           <div
             style="padding-top: 5rem"
