--- a/index.html
+++ b/index.html
@@ -30,19 +30,6 @@
   <body>
     <div class="card mb-3" style="max-width: 100%">
       <div class="row g-0">
-        <div
-          class="card-header bg-danger"
-          style="
-            font-family: 'dancing script';
-            height: 7rem;
-            font-size: 4rem;
-            font-weight: bolder;
-            color: #f25cb5;
-            text-align: center;
-            background-image: url(./images/head-background.jpg);
-          ">
-          Happy Birthday To Me
-        </div>
         <video
           src="./images/istockphoto-1038669772-640_adpp_is.mp4"
           muted
@@ -102,7 +89,7 @@
             <h2
               class="card-title"
               style="font-weight: bold; font-family: 'dancing script'">
-              #20th Birthday#
+              #My 20th Birthday#
             </h2>
             <i class="card-text" style="font-size: 1.2rem">
               "Today <b>12-08-2024</b> marks a major milestone - my
