--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
             data-bs-ride="carousel">
             <div class="carousel-inner rounded">
               <div class="carousel-item active">
-                <img src="./images/image 1.jpg" width="100%" alt="Precious" />
+                <img src="./images/image.jpg" width="100%" alt="Precious" />
               </div>
               <div class="carousel-item">
-                <img src="./images/image 2.jpg" width="100%" alt="Precious" />
+                <img src="./images/image-b.jpg" width="100%" alt="Precious" />
               </div>
               <div class="carousel-item">
-                <img src="./images/image 3.jpg" width="100%" alt="Precious" />
+                <img src="./images/image-c.jpg" width="100%" alt="Precious" />
               </div>
               <div class="carousel-item">
-                <img src="./images/image 4.jpg" width="100%" alt="Precious" />
+                <img src="./images/image-d.jpg" width="100%" alt="Precious" />
               </div>
               <div class="carousel-item">
-                <img src="./images/image 5.jpg" width="100%" alt="Precious" />
+                <img src="./images/image-e.jpg" width="100%" alt="Precious" />
               </div>
               <div class="carousel-item">
-                <img src="./images/image 6.jpg" width="100%" alt="Precious" />
+                <img src="./images/image-f.jpg" width="100%" alt="Precious" />
               </div>
             </div>
             <button
@@ -132,12 +132,10 @@
       <div class="card-body">
         <div class="card-group gap-1">
           <div class="card">
-            <video
-              src="./images/video 1.mp4"
+            <img
+              src="./images/image-d.jpg"
               class="card-img-top rounded"
-              autoplay
-              loop
-              muted></video>
+              alt="" />
             <div class="card-body">
               <h5
                 class="card-title"
@@ -242,12 +240,10 @@
             </div>
           </div>
           <div class="card">
-            <video
+            <img
+              src="./images/image-e.jpg"
               class="card-img-top rounded"
-              src="./images/video 1.mp4"
-              autoplay
-              loop
-              muted></video>
+              alt="" />
             <div class="card-body">
               <h5
                 class="card-title"
@@ -296,24 +292,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="d-grid gap-2" style="margin: 2rem 0">
-          <button class="btn" style="background-color: #ea4335">
-            <a
-              href="mailto:@gmail.com"
-              style="
-                color: #fff;
-                text-decoration: none;
-                font-size: 1.6rem;
-                text-align: center;
-                font-family: pacifico;
-              "
-              >Send me a wish here<i
-                class="fa-solid fa-envelope"
-                style="padding-left: 1rem"></i
-            ></a>
-          </button>
         </div>
 
         <div class="d-grid gap-2" style="margin: 2rem 0">
