--- a/index.html
+++ b/index.html
@@ -25,17 +25,11 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous" />
-    <title>Precious @ 20</title>
+    <title>Happy Birthday To Me</title>
   </head>
   <body>
     <div class="card mb-3" style="max-width: 100%">
       <div class="row g-0">
-        <video
-          src="./images/istockphoto-1038669772-640_adpp_is.mp4"
-          muted
-          autoplay
-          loop></video>
-
         <div class="col-md-4">
           <div
             style="padding-top: 5rem"
@@ -89,11 +83,11 @@
             <h2
               class="card-title"
               style="font-weight: bold; font-family: 'dancing script'">
-              #My 20th Birthday#
+              #My Birthday#
             </h2>
             <i class="card-text" style="font-size: 1.2rem">
-              "Today <b>12-08-2024</b> marks a major milestone - my
-              <b>20th birthday</b>! I can't believe I've made it through two
+              "Today <b>12-08-2024</b> marks a major milestone -
+              <b>my birthday</b>! I can't believe I've made it through two
               decades of life. It feels like just yesterday I was a curious,
               energetic kid, trying to navigate the world around me. Now, I'm a
               young adult, ready to take on new challenges and make my mark. I'm
@@ -109,7 +103,7 @@
               and love have meant the world to me. I couldn't have made it this
               far without you. Here's to many more years of growth, exploration,
               and adventure! I'm ready to take on the world, one day at a time.
-              <b>Happy 20th birthday to me!</b>
+              <b>Happy birthday to me!</b>
               "
             </i>
             <div class="card-text">
